# LifeCounterSW

./: .clang-format  CMakeLists.txt  Doxyfile  LifeCounter.ioc  README.md  STM32C031XX_FLASH.ld  particle_swd.cfg  programming.cfg
Core/Src/: i2c.c  main.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
include/: battery.h  buzzer.h  cmd.h  config.h  display.h  encoder.h  events.h  navigation.h  player1.h  player2.h  tasks.h  utilities.h
lib/: CMakeLists.txt
src/: main.c  version.h.in
src/battery/: monitor.c  setup.c  setup.h  view.c  view.h
src/buzzer/: buzz.c  buzz.h  buzzer.c  frequency.c  volume.c
src/cmd/: battery_cmd.c  buzzer_cmd.c  cmdList.h  display_cmd.c  poweroff_cmd.c  setup.c
src/config/: layout.h  load.c  save.c
src/display/: clear.c  digits.c  display.c  render.c  render.h  setup.c  status.c
src/encoder/: button.c  button.h  knob.c  knob.h  setup.c
src/navigation/: counter.c  counter.h  mode.c  mode.h  setting.c  setting.h  setup.c  trigger.c  trigger.h
src/player1/: handlers.c  handlers.h  setup.c
src/player2/: handlers.c  handlers.h  setup.c
src/utilities/: heartbeat.c  heartbeat.h  heartbeat_setup.c  scheduler_setup.c  setup.c  time.c
stm32cube/: .mxproject  LifeCounter.ioc
stm32cube/Core/Inc/: main.h  stm32c0xx_it.h  tim.h
stm32cube/Core/Src/: gpio.c  i2c.c  main.c  spi.c  stm32c0xx_it.c  tim.c  usart.c
